@@ -1,5 +1,6 @@
     ADDED: New Gorilla-style icon by www.OnExige.com
 
+    FIXED: combiner, smoother interoperability with Total Commander
     FIXED: UserActionMenu gets updated after Konfigurator applys
     FIXED: can't sort by extension when "Case Sensitive sort" is on
     FIXED: move to trash didn't work on kde 3.4.0
